fix the overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,27 @@
 general 
 -------
 */
+.App{
+  overflow:hidden;
+}
+.A
 body {
   font-size: 16px;
   line-height: 1.6;
   color: #333;
   overflow-x: hidden;
+  
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
 .container-fluid {
   margin: 0 auto;
   max-width: 1200px;
-  padding: 0 15px;
+  /* padding: 0 15px; */
 }
+
 
 .ant-layout {
   background: #fff !important;
@@ -77,7 +86,7 @@ header
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0;
+  padding: 15px 10px;
 }
 
 .header .logo {
@@ -229,7 +238,7 @@ hero
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 0 70px;
+  padding: 0 0 70px 20px;
 }
 
 .heroBlock h3 {
@@ -310,7 +319,7 @@ courses
 
 .courseBlock {
   margin: 0 auto;
-  padding-left: 100px;
+  /* padding-left: 100px; */
 }
 
 /* 
